@@ -386,25 +386,6 @@ LilyPond 2.4 requires the <tt>ec-fonts-mftraced</tt> package from
     <td></td><td colspan="6"><h3>GNU/Linux</h3></td>
   </tr>
 
-
-  <tr>
-    <td><p align="center"><img src="@IMAGES@redhat-logo.png"></p></td>
-    <td>
-      Red Hat 
-    </td>
-    <td>
-      7.3
-    </td>
-    <td>
-      <b>Go to
-	<a href="http://www-ccrma.stanford.edu/planetccrma/software/soundapps.html#lilypond">Planet CCRMA</a>
-      </b>
-    </td>
-    <td>2.2.6</td>
-    <td>
-      <a href="mailto:planetccrma@ccrma.stanford.edu">PlanetCCRMA</a></td>
-  </tr>
-
   <tr>
     <td>
       <p align="center">
@@ -442,7 +423,22 @@ LilyPond 2.4 requires the <tt>ec-fonts-mftraced</tt> package from
     <td><a href="mailto:wferiATafavant.elte.hu">Ferenc Wagner</a></td>
   </tr>
 
-  
+  <tr>
+    <td><p align="center"><img src="@IMAGES@gentoo.jpeg"></p></td>
+    <td>
+      Gentoo testing
+    </td>
+    <td>
+      
+    </td>
+    <td>
+      <b>Go <a href="http://packages.gentoo.org/packages/?category=media-sound;name=lilypond">here</a>.
+      </b>
+    </td>
+    <td>2.2.2</td>
+    <td></td>
+  </tr>
+
   <tr>
     <td><p align="center"><img src="@IMAGES@mandrake-logo.jpeg"></p></td>
     <td>
@@ -461,6 +457,23 @@ LilyPond 2.4 requires the <tt>ec-fonts-mftraced</tt> package from
     <td><a href="mailto:tobbeATnyvallsDOTse">Torbj&ouml;rn Turpeinen</a></td>
   </tr>
 
+  <tr>
+    <td><p align="center"><img src="@IMAGES@redhat-logo.png"></p></td>
+    <td>
+      Red Hat 
+    </td>
+    <td>
+      7.3
+    </td>
+    <td>
+      <b>Go to
+	<a href="http://www-ccrma.stanford.edu/planetccrma/software/soundapps.html#lilypond">Planet CCRMA</a>
+      </b>
+    </td>
+    <td>2.2.6</td>
+    <td>
+      <a href="mailto:planetccrma@ccrma.stanford.edu">PlanetCCRMA</a></td>
+  </tr>
 
   <tr>
     <td><p align="center"><img src="@IMAGES@slackware-logo.png"></p></td>
@@ -478,8 +491,6 @@ LilyPond 2.4 requires the <tt>ec-fonts-mftraced</tt> package from
     <td><a href="mailto:hoffmannATuninetDOTcomDOTbr">Ricardo Hoffmann</a></td>
   </tr>
 
-
-  
   <tr>
     <td><p align="center"><img src="@IMAGES@suse-logo.png"></p></td>
     <td>
@@ -497,24 +508,25 @@ LilyPond 2.4 requires the <tt>ec-fonts-mftraced</tt> package from
     <td><a href="http://www.suse.com">SUSE</a></td>
   </tr>
 
-      
   <tr>
-    <td><p align="center"><img src="@IMAGES@gentoo.jpeg"></p></td>
     <td>
-      Gentoo testing
+      <p align="center">
+	<img src="@IMAGES@ubuntu.png">
+      </p>
     </td>
     <td>
-      
+      ubuntu
     </td>
     <td>
-      <b>Go <a href="http://packages.gentoo.org/packages/?category=media-sound;name=lilypond">here</a>.
-      </b>
+      Hoary/universe
     </td>
-    <td>2.2.2</td>
-    <td></td>
+    <td>
+      <em>included with distribution</em>
+    </td>
+    <td>2.2.6</td>
+    <td><a href="ubuntulinux.org">ubuntu</a></td>
   </tr>
-
-  
+      
   <tr bgcolor="#e8ffe8" >
     <td></td><td colspan=6><h3>Other</h3></td>
   </tr>
